--- a/index.html
+++ b/index.html
@@ -77,7 +77,16 @@
     .step{display:flex;gap:12px;align-items:flex-start;background:#fff;border:1px solid var(--ring);border-radius:16px;padding:14px;box-shadow:0 10px 26px var(--shadow1)}
     .step .num{width:40px;height:40px;border-radius:50%;background:#0f172a;color:#fff;display:flex;align-items:center;justify-content:center;font-weight:900}
     .step h3{font-size:18px;margin-bottom:2px}
-    .step .sub{color:#111;font-size:16px;margin:2px 0 0}
+     .step .sub{
+  font-size:16px;
+  margin:6px 0 0;
+  color:#0b1220;
+  background:#ffeb66;
+  display:inline-block;
+  padding:2px 8px;
+  border-radius:6px;
+}
+
 
 
     .how-panel{background:#fff;border:1px solid var(--ring);border-radius:18px;padding:16px;box-shadow:0 8px 22px var(--shadow1)}
