--- a/index.html
+++ b/index.html
@@ -992,6 +992,13 @@
     .m-name{font-weight:900;font-size:18px;line-height:1.2;color:#0b1220}
     .m-meta{font-weight:700;font-size:13px;color:#475569}
     .m-line{margin-top:10px;color:#111827}
+    /* overrides for dark mentor cards */
+#mentors .m-card{ color:#fff; }                     /* default text */
+#mentors .m-card .m-name{ color:#fff !important; }  /* title */
+#mentors .m-card .m-meta{ color:#C7D2FE !important; } /* subtitle */
+#mentors .m-card .m-line{ color:#E5E7EB !important; } /* quote/body */
+#mentors .m-card .m-ava{ border-color:rgba(255,255,255,.22); background:#0B112D; }
+
     .m-cta{display:flex;justify-content:center;margin-top:8px}
   </style>
 
