--- a/index.html
+++ b/index.html
@@ -684,22 +684,24 @@
 <div class="carousel-wrapper">
   <div class="carousel" aria-label="Parent WhatsApp messages">
   <!-- 1 -->
-  <article class="card-xl shot">
-    <div class="img" style="--cropTop:36px; background-image:url('6.png.jpeg');"></div>
-    <div class="title">From 58% in Jan → AIR 1898 — “Your roadmap + micro-tests changed everything”</div>
-  </article>
-
   <!-- 2 -->
-  <article class="card-xl shot">
-    <div class="img" style="--cropTop:28px; background-image:url('7.png.jpeg');"></div>
-    <div class="title">Micro-test 8/10; school weekly test jumped 9/20 → 14/20 — steady improvement</div>
-  </article>
+<div class="card-xl shot">
+  <div class="img" style="--cropTop:18px; background-image:url('6.png.jpeg');"></div>
+  <div class="title">From 58% in Jan → AIR 1898 — “Your roadmap + micro-tests changed everything”</div>
+</div>
 
-  <!-- 3 -->
-  <article class="card-xl shot">
-    <div class="img" style="--cropTop:32px; background-image:url('8.png.jpeg');"></div>
-    <div class="title">Referral from IIT-Bombay parent → booked free assessment → personalized roadmap</div>
-  </article>
+<!-- 3 -->
+<div class="card-xl shot">
+  <div class="img" style="--cropTop:18px; background-image:url('7.png.jpeg');"></div>
+  <div class="title">Micro-test 8/10; school weekly test jumped 9/20 → 14/20 — steady improvement</div>
+</div>
+
+<!-- 4 -->
+<div class="card-xl shot">
+  <div class="img" style="--cropTop:16px; background-image:url('8.png.jpeg');"></div>
+  <div class="title">Referral from IIT-Bombay parent → booked free assessment → personalized roadmap</div>
+</div>
+
 </div> <!-- end .carousel -->
 
 
@@ -979,16 +981,17 @@
 
     .m-head{display:flex;align-items:center;gap:12px}
     /* circular avatar like your screenshot */
-    .m-ava{
+   .m-ava{
   width:76px;
   height:76px;
   border-radius:999px;
   object-fit:cover;
-  object-position:50% 32%;   /* show a bit more top (hair) */
+  object-position:50% 28%;  /* moved up from 32% */
   background:#0B112D;
   border:3px solid rgba(255,255,255,.22);
   box-shadow:0 8px 22px rgba(0,0,0,.08);
 }
+
 
     .m-name{font-weight:900;font-size:18px;line-height:1.2;color:#0b1220}
     .m-meta{font-weight:700;font-size:13px;color:#475569}
