--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
   <!-- PROCESS -->
   <section class="process" id="process">
     <div class="container">
-      <h2 class="section-title">How It Works</h2>
+      <h2 class="section-title">Our 4 Steps Success Formula</h2>
 
       <div class="steps">
         <article class="step">
