--- a/index.html
+++ b/index.html
@@ -471,8 +471,6 @@
           </div>
         </article>
           </div>
-<div class="plus-sep" aria-hidden="true">+</div>
-<div class="step-wrap">
 
           
 
@@ -518,6 +516,10 @@
     <div style="margin-top:8px;font-size:20px">✅</div>
   </div>
 </div>
+          </div>
+<div class="plus-sep" aria-hidden="true">+</div>
+<div class="step-wrap">
+
 
 
         <article class="step" id="roadmap-step">
