--- a/index.html
+++ b/index.html
@@ -86,9 +86,14 @@
 .step-wrap > .step{border:none;box-shadow:none;padding:0;background:transparent}
 .step-wrap > .how-panel{margin-top:12px}
 .plus-sep{
-  text-align:center;font-weight:900;font-size:32px;line-height:1;
-  color:#0b1220;filter:drop-shadow(0 4px 12px rgba(0,0,0,.08));
+  display:flex;align-items:center;justify-content:center;
+  font-weight:900;line-height:1;
+  font-size:clamp(44px,9vw,86px);
+  margin:18px 0;                 /* a little breathing room */
+  color:#0b1220;
+  filter:drop-shadow(0 4px 12px rgba(0,0,0,.08));
 }
+
 
     .step{display:flex;gap:12px;align-items:flex-start;background:#fff;border:1px solid var(--ring);border-radius:16px;padding:14px;box-shadow:0 10px 26px var(--shadow1)}
     /* perfect round step badge */
