--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   flex-direction:column;
   gap:10px;
   margin:10px 0 18px;
+  align-items:center;
 }
 .ovr{
   display:flex; align-items:center; gap:12px;
@@ -86,6 +87,7 @@
   padding:16px 18px;
   box-shadow:0 12px 28px var(--shadow1);
   font-weight:900;
+    width:fit-content; 
 }
 .ovr .num{
   width:36px; height:36px; flex:0 0 36px;
