--- a/index.html
+++ b/index.html
@@ -425,6 +425,9 @@
   <div class="plus">+</div>
   <div class="ovr"><span class="num">4</span><span>We Track and Improve Performance in Real Time</span></div>
 </div>
+</div>  <!-- closes .steps-overview -->
+<h3 class="section-sub" id="how-it-works">How It Works</h3>
+<div class="steps">
 
 
 
@@ -670,7 +673,22 @@
         font-size: 14px;
         backdrop-filter: blur(4px);
       }
-      
+      .section-sub{
+  font-size:22px;
+  font-weight:900;
+  text-align:center;
+  margin:8px 0 12px;   /* small gap above/below */
+  color:#0b1220;
+}
+
+.process .steps{ 
+  margin-top:12px;     /* gives space after the subheading */
+}
+
+@media (min-width:768px){
+  .section-sub{ font-size:28px; margin:10px 0 16px; }
+}
+
 
     </style>
 
