--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
     .big{font-size:20px;font-weight:900}
 
     .section-title{font-size:24px;font-weight:900;text-align:center;margin:24px 0 12px}
+    /* more space between the H2 and the first dark pill */
+.process .section-title{ margin-bottom: 24px; }  /* was 12px */
+
 
     /* Steps & panels */
     /* Steps overview — vertical with + separators */
@@ -76,7 +79,7 @@
   display:flex;
   flex-direction:column;
   gap:10px;
-  margin:10px 0 18px;
+   margin:10px 0 28px;
   align-items:center;
 }
 .ovr{
@@ -677,7 +680,7 @@
   font-size:22px;
   font-weight:900;
   text-align:center;
-  margin:8px 0 12px;   /* small gap above/below */
+  margin:12px 0 16px;   /* small gap above/below */
   color:#0b1220;
 }
 
