--- a/index.html
+++ b/index.html
@@ -732,46 +732,45 @@
       <div class="carousel-wrapper" style="background:#f8fafc;border-radius:16px;padding:8px 0">
         <div class="carousel" aria-label="Topper stories">
           <!-- Card 1 -->
-          <article class="student-card">
-            style="--focusY: 22%; background-image:url('stu11.png');">
-              <div class="student-ribbon">
-                <div class="student-name">Sri Charan</div>
-                <div class="student-score">AIR 23 · 99.7%</div>
-              </div>
-            </div>
-            <div class="student-body">
-              <div class="student-univ">IIT Bombay (Computer Science)</div>
-              <div class="student-quote">“Physics 45% → 96% with targeted mentoring, micro-tests and weekly parent reviews.”</div>
-            </div>
-          </article>
+          <!-- Card 1 -->
+<article class="student-card">
+  <div class="student-photo" style="--focusY:22%; background-image:url('stu11.png');"></div>
+  <div class="student-ribbon">
+    <div class="student-name">Sri Charan</div>
+    <div class="student-score">AIR 23 · 99.7%</div>
+  </div>
+  <div class="student-body">
+    <div class="student-univ">IIT Bombay (Computer Science)</div>
+    <div class="student-quote">“Physics 45% → 96% with targeted mentoring, micro-tests and weekly parent reviews.”</div>
+  </div>
+</article>
 
-          <!-- Card 2 (fixed style attr) -->
-          <article class="student-card">
-            style="--focusY: 24%; background-image:url('stu22.png');">
-              <div class="student-ribbon">
-                <div class="student-name">Yashwitha</div>
-                <div class="student-score">IIT Delhi Admit</div>
-              </div>
-            </div>
-            <div class="student-body">
-              <div class="student-univ">IIT Delhi</div>
-              <div class="student-quote">“Daily reviews → strong consistency. Doubt support + sprint drills fixed accuracy.”</div>
-            </div>
-          </article>
+<!-- Card 2 -->
+<article class="student-card">
+  <div class="student-photo" style="--focusY:24%; background-image:url('stu22.png');"></div>
+  <div class="student-ribbon">
+    <div class="student-name">Yashwitha</div>
+    <div class="student-score">IIT Delhi Admit</div>
+  </div>
+  <div class="student-body">
+    <div class="student-univ">IIT Delhi</div>
+    <div class="student-quote">“Daily reviews → strong consistency. Doubt support + sprint drills fixed accuracy.”</div>
+  </div>
+</article>
 
-          <!-- Card 3 -->
-          <article class="student-card">
-            style="--focusY: 20%; background-image:url('stu33.png');">
-              <div class="student-ribbon">
-                <div class="student-name">Arjun Sharma</div>
-                <div class="student-score">AIR 45 · 94% Maths</div>
-              </div>
-            </div>
-            <div class="student-body">
-              <div class="student-univ">IIT Madras</div>
-              <div class="student-quote">“Sprint drills + precise feedback → 52% to 94%. Course corrections every 2 weeks.”</div>
-            </div>
-          </article>
+<!-- Card 3 -->
+<article class="student-card">
+  <div class="student-photo" style="--focusY:20%; background-image:url('stu33.png');"></div>
+  <div class="student-ribbon">
+    <div class="student-name">Arjun Sharma</div>
+    <div class="student-score">AIR 45 · 94% Maths</div>
+  </div>
+  <div class="student-body">
+    <div class="student-univ">IIT Madras</div>
+    <div class="student-quote">“Sprint drills + precise feedback → 52% to 94%. Course corrections every 2 weeks.”</div>
+  </div>
+</article>
+
         </div>
       </div>
     </div>
