--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
   <div class="student-photo" style="--focusY:22%; background-image:url('stu11.png');"></div>
   <div class="student-ribbon">
     <div class="student-name">Sri Charan</div>
-    <div class="student-score">AIR 23 · 99.7%</div>
+    
   </div>
   <div class="student-body">
     <div class="student-univ">IIT Bombay (Computer Science)</div>
@@ -760,7 +760,7 @@
   <div class="student-photo" style="--focusY:24%; background-image:url('stu22.png');"></div>
   <div class="student-ribbon">
     <div class="student-name">Yashwitha</div>
-    <div class="student-score">IIT Delhi Admit</div>
+    <div class="student-score">NIT Delhi Admit</div>
   </div>
   <div class="student-body">
     <div class="student-univ">IIT Delhi</div>
@@ -773,7 +773,6 @@
   <div class="student-photo" style="--focusY:20%; background-image:url('stu33.png');"></div>
   <div class="student-ribbon">
     <div class="student-name">Arjun Sharma</div>
-    <div class="student-score">AIR 45 · 94% Maths</div>
   </div>
   <div class="student-body">
     <div class="student-univ">IIT Madras</div>
